--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.body {
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-image: linear-gradient(
+      rgba(19, 19, 19, 0.8),
+      rgba(19, 39, 27, 0.8)
+    ),
+    url("https://source.unsplash.com/random/1920x1080/?nature"); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  /* background: url("https://source.unsplash.com/random/1920x1080/?nature"); */
   color: white;
+  background-size: cover;
+  overflow: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+/* Class CSS Implementation */
+
+/* Here implmenting CSS to Clock Heading, transforming the text to uppercase and giving some space between letters and giving the size to font and aligning the heading to center. */
+.clockHeading {
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+  font-size: 2.5rem;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Implementing CSS to Clock. First making display type as flex */
+.clock {
+  display: flex;
+}
+
+/* 2nd setting clock div position as relative. It changes the position of the element relative to the parent element and relative to itself and where it would usually be in the regular document flow of the page. */
+.clock div {
+  margin: 1rem;
+  position: relative;
+}
+
+/* Implementing CSS to clock span for designing clock hours, minutes, and seconds time and texts. */
+.clock span {
+  display: flex;
+  width: 7rem;
+  height: 5rem;
+  background: black;
+  color: white;
+  opacity: 0.8;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  text-shadow: 2px 2px 4px rgba(0, 174, 255, 0.3);
+  background-size: cover;
+  overflow: hidden;
+}
+
+/* Implementing CSS to clock texts only. */
+.clock .text {
+  height: 2rem;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  background: rgb(2, 44, 71);
+  opacity: 0.8;
+}
+
+/* Class and ID CSS Implementation */
+
+/* Implementing CSS to clock amPm to look something diffrent. */
+.clock #amPm {
+  bottom: 0;
+  position: absolute;
+  width: 5rem;
+  height: 2rem;
+  font-size: 1.5rem;
+  letter-spacing: 0.2rem;
+  background: rgb(0, 141, 12);
+}
+
+/* Media Queries Implementation*/
+/* Here Implementing some media quries to look good on mobile phone, so basically this project is mobile friendly. Means Responsive */
+@media only screen and (max-width: 600px) {
+  .clockHeading {
+    text-transform: uppercase;
+    letter-spacing: 0.5rem;
+    font-size: 1.5rem;
+    text-align: center;
   }
-  to {
-    transform: rotate(360deg);
+
+  .clock div {
+    margin: 0.3rem;
+    position: relative;
+  }
+
+  .clock span {
+    display: flex;
+    width: 5rem;
+    height: 3rem;
+    background: black;
+    color: white;
+    opacity: 0.8;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    text-shadow: 2px 2px 4px rgba(0, 174, 255, 0.3);
+    background-size: cover;
+    overflow: hidden;
+  }
+
+  .clock .text {
+    height: 1rem;
+    font-size: 0.6rem;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    background: rgb(2, 44, 71);
+    opacity: 0.8;
+  }
+
+  .clock #amPm {
+    bottom: 0;
+    position: absolute;
+    width: 3rem;
+    height: 1rem;
+    font-size: 0.5rem;
+    letter-spacing: 0.2rem;
+    background: rgb(0, 141, 12);
   }
 }
